<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Zalgneyh</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_text">Don’t have an account? <u>Sign Up</u></string>
    <string name="signUp_text">Have an account? <u>Sign In</u></string>
    <string name="privacy_service"><u>Terms of Service</u> | <u>Privacy Policy</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="join">Join</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm">Confirm</string>
    <string name="or">Or</string>
    <string name="google">Google</string>
    <string name="no_google_account">NO_GOOGLE_ACCOUNT</string>
    <string name="credential_error">CREDENTIAL_ERROR: %1$s</string>
    <string name="please_try_google_sign_in_again">Please try Google Sign-In again</string>
    <string name="email_is_required">Email is required</string>
    <string name="email_is_not_valid">Email is not valid</string>
    <string name="password_is_required">Password is required</string>
    <string name="password_length_requirements">Password must be at least 6 characters</string>
    <string name="link_to_google_login_page">com.google</string>
    <string name="google_account_required">Google account required</string>
    <string name="to_use_google_sign_in_please_add_a_google_account_to_your_device">To use Google Sign-In, please add a Google account to your device.</string>
    <string name="add_account">Add Account</string>
    <string name="cancel">Cancel</string>
    <string name="google_sign_in_error_message">Google Sign In Error: %1$s</string>
    <string name="stt_google_sign_in_failed">Google Sign In Failed: %1$s</string>
    <string name="stt_no_google_account">NO_GOOGLE_ACCOUNT</string>
    <string name="stt_google_sign_in_success">Google Sign In Success</string>
    <string name="error">Error: %1$s</string>
    <string name="success">Success</string>
    <string name="home">Home</string>
    <string name="song">Song</string>
    <string name="albums">Albums</string>
    <string name="artist">Artist</string>
    <string name="playlist">Playlist</string>
    <string name="see_more">See more</string>
    <string name="create_new_playlist">Create New Playlist</string>
    <string name="create">Create</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="play_pause">Play/Pause</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="shuffle">Shuffle</string>
    <string name="repeat">Repeat</string>
    <string name="close">Close</string>
    <string name="playing_now">Playing Now</string>
    <string name="queue">Queue</string>
    <string name="queue_now_playing">Now playing</string>
    <string name="queue_up_next">Up next</string>
    <string name="queue_later">Later</string>
    <string name="lyrics">Lyrics</string>
    <string name="search">Search</string>
    <string name="search_songs_artists_albums">Search songs, artists, albums…</string>
    <string name="search_for_music">Search for music</string>
    <string name="search_description">Find your favorite songs, artists, and albums</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="clear_search">Clear search</string>
    <string name="clear_all">Clear All</string>
    <string name="no_results_found">No results found</string>
    <string name="try_different_keywords">Try searching with different keywords</string>
    <string name="songs">Songs</string>
    <string name="artists">Artists</string>
    <string name="remove">Remove</string>
    <string name="loading">Loading…</string>
    <string name="error_loading">Error loading data</string>
    <string name="retry" tools:ignore="PrivateResource">Retry</string>
    <string name="ok" tools:ignore="PrivateResource">OK</string>
    <string name="top_artists_in_your_country">Top Artists in your country</string>
    <string name="sort_by_recent">Sort by: Recent</string>
    <string name="album_cover">Album cover</string>
    <string name="playlist_cover">Playlist cover</string>
    <string name="song_title">Song Title</string>
    <string name="artist_name">Artist Name</string>
    <string name="toast_playing">Playing: %1$s</string>
    <string name="toast_song">Song: %1$s</string>
    <string name="toast_artist">Artist: %1$s</string>
    <string name="toast_album">Album: %1$s</string>
    <string name="toast_menu">Menu: %1$s</string>
    <string name="toast_playlist">Playlist: %1$s</string>
    <string name="error_loading_artists">Error loading artists: %1$s</string>
    <string name="error_loading_albums">Error loading albums: %1$s</string>
    <string name="error_loading_recently_heard">Error loading recently heard: %1$s</string>
    <string name="error_loading_suggestions">Error loading suggestions: %1$s</string>
    <string name="unknown_error">Unknown error</string>
    <string name="error_loading_songs">Error loading songs: %1$s</string>
    <string name="error_loading_album">Error loading album: %1$s</string>
    <string name="album_no_songs">This album has no songs</string>
    <string name="artist_no_songs">This artist has no songs</string>
    <string name="top_artist_in_your_country">Top Artist in your country</string>
    <string name="top_world_artist_of_the_month">Top World Artist Of The Month</string>
    <string name="song_count">%1$d songs</string>
    <string name="created_by">By %1$s</string>
    <string name="track_count">%1$d tracks</string>
    <string name="no_description">No description</string>
    <string name="mo_play_next">Play next</string>
    <string name="mo_add_to_queue">Add to queue</string>
    <string name="mo_add_to_playlist">Add to playlist</string>
    <string name="mo_go_to_artist">Go to artist</string>
    <string name="mo_go_to_album">Go to album</string>
    <string name="mo_share">Share</string>
    <string name="mo_follow">Follow</string>
    <string name="mo_unfollow">unfollow</string>
    <string name="mo_play_all_songs">Play all songs</string>
    <string name="mo_play_all">Play all</string>
    <string name="mo_add_all_to_playlist">Add all to playlist</string>
    <string name="mo_edit_playlist">Edit playlist</string>
    <string name="mo_delete_playlist">Delete playlist</string>
    <string name="account_settings">Account &amp; Settings</string>
    <string name="account_edit_profile">Edit Profile</string>
    <string name="account_view_stats">View Statistics</string>
    <string name="account_manage_subscription">Manage Subscription</string>
    <string name="account_help">Help &amp; Support</string>
    <string name="account_about">About</string>
    <string name="account_privacy_policy">Privacy Policy</string>
    <string name="account_logout">Logout</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_audio_quality">Audio Quality</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_storage">Storage</string>
    <string name="settings_language">Language</string>
    <string name="section_account">Account</string>
    <string name="section_app_settings">App Settings</string>
    <string name="section_help_about">Help &amp; About</string>
    <string name="section_danger_zone">Danger Zone</string>
    <string name="logout_confirmation_title">Logout</string>
    <string name="logout_confirmation_message">Are you sure you want to logout?</string>
    <string name="user_name">User Name</string>
    <string name="user_email_com">user@email.com</string>
    <string name="action_title">Action Title</string>
    <string name="section_title">Section Title</string>
    <string name="feature_songs">Feature songs</string>
    <string name="track_list">Track list</string>
    <string name="storage_manager">Storage Manager</string>
    <string name="data_can_delete">Data can delete</string>
    <string name="image_cache_glide">Image cache (Glide)</string>
    <string name="music_cache_amp_system"><![CDATA[music cache & system]]></string>
    <string name="clean_now">Clean now</string>
    <string name="cleaning">Cleaning…</string>
    <string name="cleaned">Cleaned</string>
    <string name="favorite">Favorite</string>
    <string name="un_favorite">Remove from favorite</string>
    <string name="follower">%1$d follower</string>
    <string name="followed_artists">Followed artists</string>
    <string name="no_lyrics_found">This song hasn\'t lyrics yet</string>
    <string name="no_suggestions">No suggestions for you yet</string>
    <string name="toast_added_to_play_next">Added to play next queue</string>
    <string name="toast_added_to_queue">Added to queue</string>
    <string name="toast_playlist_created">Playlist created successfully!</string>
    <string name="toast_cannot_edit_default_playlist">Cannot edit default playlist</string>
    <string name="toast_no_playlists">You don\'t have any playlists yet</string>
    <string name="toast_added_to_playlist">Added to playlist successfully!</string>
    <string name="toast_failed_add_to_playlist">Failed to add to playlist</string>
    <string name="toast_unfollowed_artist">Unfollowed %1$s</string>
    <string name="toast_following_artist">Following %1$s ❤️</string>
    <string name="toast_connection_error">Connection error</string>
    <string name="toast_connection_error_with_msg">Connection error: %1$s</string>
    <string name="toast_syncing_data">Syncing data, please try again in a moment…</string>
    <string name="toast_added_to_favorites">Added to Favorites ❤️</string>
    <string name="toast_removed_from_favorites">Removed from Favorites 💔</string>
    <string name="toast_playing_album">Playing Album: %1$s</string>
    <string name="toast_loading_songs">Loading songs…</string>
    <string name="toast_loading_artist_songs">Loading songs by %1$s…</string>
    <string name="toast_playing_artist">Playing music by %1$s</string>
    <string name="toast_playing_playlist">Playing playlist: %1$s</string>
    <string name="toast_playlist_empty">Playlist is empty</string>
    <string name="toast_playlist_deleted">Playlist deleted</string>
    <string name="toast_error_with_result">Error: %1$s</string>
    <string name="toast_sign_up_success">Sign Up Success</string>
    <string name="toast_unknown_album">Unknown Album</string>
    <string name="error_navigation_not_supported">Error: Activity does not support navigation</string>
    <string name="dialog_add_to_playlist_title">Add to Playlist</string>
    <string name="dialog_delete_playlist_title">Delete Playlist</string>
    <string name="dialog_delete_playlist_message">Are you sure you want to delete playlist \'%1$s\'?</string>
    <string name="dialog_delete">Delete</string>
    <string name="share_song_message">Listen to %1$s by %2$s on Zalgneyh Music!</string>
    <string name="share_album_message">Listen to the amazing album %1$s on Zalgneyh Music!</string>
    <string name="share_artist_message">Discover artist %1$s on Zalgneyh Music!</string>
    <string name="share_playlist_message">Listen to the amazing playlist %1$s on Zalgneyh Music!</string>
    <string name="share_via">Share via</string>
    <string name="error_name_empty">Name cannot be empty</string>
    <string name="save">Save</string>
    <string name="t_n_playlist">Playlist Name</string>
    <string name="mota_tuychon">Description (Optional)</string>
    <string name="download">Download</string>
    <string name="downloaded">Dowloaded</string>
    <plurals name="numberOfSongs">
        <item quantity="one">%d song</item>
        <item quantity="other">%d songs</item>
    </plurals>
    <string name="error_sign_in_required">Please sign in to view playlists</string>
</resources>