<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.auth.SignUpFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageViewAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/applicationmaintitle"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutSignUpContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayoutSignUpContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/parent_item_shape_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewSignOptTitle"
            style="@style/MainTitleFormat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textSize="32sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextUserNameSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="17dp"
            android:layout_marginVertical="26dp"
            android:background="@drawable/item_shape_background"
            android:fontFamily="@font/urbanist_medium"
            android:hint="@string/username"
            android:padding="14dp"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextPasswordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="17dp"
            android:background="@drawable/item_shape_background"
            android:fontFamily="@font/urbanist_medium"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="14dp"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextConfirmPasswordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="17dp"
            android:layout_marginVertical="24dp"
            android:background="@drawable/item_shape_background"
            android:fontFamily="@font/urbanist_medium"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="14dp"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonConfirmSignUp"
            style="@style/SignTitleFormat"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="87dp"
            android:background="@drawable/confirm_sign_button_background"
            android:paddingHorizontal="16dp"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewSignUp"
            style="@style/SubTitleFormat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingVertical="8dp"
            android:text="@string/signUp_text"
            android:textAlignment="center"
            android:textSize="11sp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewPrivacyService"
        style="@style/SubTitleFormat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_service"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>